@@ -1,4 +1,4 @@
-$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.67 2005/01/12 12:51:54 ph10 Exp $
+$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.68 2005/01/12 15:41:27 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -303,6 +303,11 @@ Exim version 4.50
 69. Fixed some compiler warnings in acl.c for the bitmaps specified with
     negated items (that is, ~something) in unsigned ints. Some compilers
     apparently mutter when there is no cast.
+
+70. If an address verification called from an ACL failed, and did not produce a
+    user-specific message (i.e. there was only a "system" message), nothing was
+    put in $acl_verify_message. In this situation, it now puts the system
+    message there.
 
 
 Exim version 4.43
